# CNN_SVM_for_DFC2017

./: CMakeLists.txt  ReadMe.md  create_svm_file.cpp  create_svm_file.sh  do_cross_validation.sh  publicdfc.cpp  publicdfc.sh  vgg7bis.prototxt
unrelated/: ReadMe.md  extract_feature.py  produce_undetectable_hack.py  run.sh
